# kde-nomodeset

./: CMakeLists.txt
po/ar/: kde-nomodeset.po
po/ca/: kde-nomodeset.po
po/ca@valencia/: kde-nomodeset.po
po/cs/: kde-nomodeset.po
po/de/: kde-nomodeset.po
po/el/: kde-nomodeset.po
po/en_GB/: kde-nomodeset.po
po/eo/: kde-nomodeset.po
po/es/: kde-nomodeset.po
po/eu/: kde-nomodeset.po
po/fi/: kde-nomodeset.po
po/fr/: kde-nomodeset.po
po/ga/: kde-nomodeset.po
po/gl/: kde-nomodeset.po
po/he/: kde-nomodeset.po
po/hi/: kde-nomodeset.po
po/it/: kde-nomodeset.po
po/ja/: kde-nomodeset.po
po/ka/: kde-nomodeset.po
po/ko/: kde-nomodeset.po
po/lt/: kde-nomodeset.po
po/nl/: kde-nomodeset.po
po/nn/: kde-nomodeset.po
po/pl/: kde-nomodeset.po
po/pt/: kde-nomodeset.po
po/pt_BR/: kde-nomodeset.po
po/ro/: kde-nomodeset.po
po/ru/: kde-nomodeset.po
po/sk/: kde-nomodeset.po
po/sl/: kde-nomodeset.po
po/sv/: kde-nomodeset.po
po/tr/: kde-nomodeset.po
po/uk/: kde-nomodeset.po
po/zh_CN/: kde-nomodeset.po
po/zh_TW/: kde-nomodeset.po
src/: CMakeLists.txt  Messages.sh  main.cpp  org.kde.nomodeset.desktop
src/polkit/: CMakeLists.txt  helper.cpp  org.kde.neon.nomodeset.actions  org.kde.nomodeset.actions
src/qml/: BusyPage.qml  DisablePage.qml  DisabledPage.qml  ErrorPage.qml  InfoPage.qml  main.qml  qml.qrc
systemd/: CMakeLists.txt  kde-nomodeset.service
